<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mmall</string>
    <string name="title_section1">首页</string>
    <string name="title_section2">分类</string>
    <string name="title_section3">购物车</string>
    <string name="title_section4">店铺</string>
    <string name="title_section5">我的</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="language_select">语中选择</string>
    <string name="currency_select">币种选择</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hp_discount_youlike_1"></string>
    <string name="hp_discount_youlike_2"></string>
    <string name="hp_discount_limittime_1"></string>
    <string name="hp_discount_limittime_2"></string>
    <string name="hp_discount_recommend_1"></string>
    <string name="hp_discount_recommend_2"></string>
    <string name="string_favoriate_product">收藏的产品</string>
    <string name="string_favoriate_store">收藏的店铺</string>
    <string name="string_my_store">我的店铺</string>
    <string name="string_address_management">收藏地址管理</string>
    <string name="string_all">全部</string>
    <string name="string_favoriate_trans_product">收藏的易物</string>
    <string name="string_my_profile">个人资料</string>
    <string name="string_modify_pwd">修改密码</string>
    <string name="string_mepay_bind">Mepay绑定</string>
    <string name="string_spay_bind">S支付绑定</string>
    <string name="string_about_mmall">关于Mmall</string>
    <string name="string_clear_cache">清除缓存</string>
    <string name="string_logout">退出登录</string>
    <string name="string_profileimage">头像</string>
    <string name="string_profile_email">登录邮箱</string>
    <string name="string_profile_name">真实姓名</string>
    <string name="string_profile_sex">性别</string>
    <string name="string_profile_location">所在地区</string>
    <string name="string_profile_phonenumber">手机号码</string>
    <string name="string_my_setting_changepwd">设置密码</string>
    <string name="string_pls_old_password">请输入旧密码</string>
    <string name="string_pls_new_password">请设置新的密码</string>
    <string name="string_pls_new_password_again">请再一次输入新密码</string>
    <string name="string_ok">确定</string>
    <string name="string_my_address_management">收货地址管理</string>
    <string name="string_address_modify">收货地址修改</string>
    <string name="string_submit">提交</string>
    <string name="string_my_forgot_password">找回密码</string>
    <string name="string_pls_auth_email">请输入认证邮箱</string>
    <string name="string_next">下一步</string>
    <string name="string_registration">注册</string>
    <string name="string_pls_email">请输入邮箱</string>
    <string name="string_pls_password">请输入密码</string>
    <string name="string_registration_success">注册成功</string>
    <string name="string_my_mmall">我的Mmall</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_favorite_product">FavoriteProductActivity</string>
    <string name="string_my_favorite_store">收藏的店铺</string>
    <string name="string_login">登录</string>
    <string name="string_common_back_home">返回首页</string>
    <string name="string_common_language_slect">语种选择</string>
    <string name="string_common_currency_select">币种选择</string>
    <string name="string_mepaybind">Mepay绑定</string>
    <string name="string_bind">绑定</string>
    <string name="string_pls_mepay_account">请输入易支付帐户</string>
    <string name="string_product_shoppingcart">产品购物车</string>
    <string name="string_trasfer_shoppingcart">易物购物车</string>
    <string name="string_product_list">产品列表</string>
    <string name="string_transfer_list">易物列表</string>
    <string name="string_sales_volume">销量</string>
    <string name="string_hot_deg">热度</string>
    <string name="string_gegin_time">上架时间</string>
    <string name="string_price">价格</string>
    <string name="string_country">国家</string>
    <string name="string_product_detail">产品详情</string>

</resources>
