<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">
    <android.support.v4.view.ViewPager android:id="@+id/pager"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radiogroup"
        android:background="@drawable/border_top"
        android:paddingTop="5dp">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_section1"
            android:id="@+id/radioButton"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/n_home"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@drawable/nav_color"
            android:checked="true"
            android:textSize="14sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_section2"
            android:id="@+id/radioButton2"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/n_category"
            android:gravity="center_horizontal"
            android:textColor="@drawable/nav_color"
            android:textSize="14sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_section4"
            android:id="@+id/radioButton3"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/n_store"
            android:gravity="center_horizontal"
            android:textColor="@drawable/nav_color"
            android:textSize="14sp"
            android:checked="false" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_section3"
            android:id="@+id/radioButton4"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/n_cart"
            android:gravity="center_horizontal"
            android:textColor="@drawable/nav_color"
            android:textSize="14sp"
            android:checked="false" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_section5"
            android:id="@+id/radioButton5"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/n_my"
            android:gravity="center_horizontal"
            android:textColor="@drawable/nav_color"
            android:textSize="14sp" />

    </RadioGroup>
</LinearLayout>
