<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:background="@drawable/border_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_my_forgot_password"
            android:id="@+id/textView6"
            android:textColor="#000"
            android:layout_alignParentLeft="false"
            android:layout_marginLeft="192dp"
            android:layout_alignParentTop="false"
            android:layout_marginTop="23dp"
            android:layout_centerInParent="true"
            android:singleLine="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:src="@drawable/b_i_b" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:background="#fff"
        android:id="@+id/ll_forgot_tip"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView17"
            android:src="@drawable/y" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="找回码已经发送到您的认证邮箱mmall@mmall.com,请前往激活"
            android:id="@+id/textView22"
            android:gravity="center"
            android:textColor="#555555" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword|textEmailAddress"
        android:ems="10"
        android:id="@+id/etxt_email"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/l_i_01"
        android:hint="@string/string_pls_auth_email"
        android:padding="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_next"
        android:id="@+id/btn_next"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_red_bg"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#fff"
        android:textSize="20sp" />

</LinearLayout>
